tests/expectations/compiler/structs/struct_contains_record_fail.out
DCE_ENABLED:
Error [ETYC0372030]: A struct or record cannot contain another record.
    --> compiler-test:5:9
     |
   5 |         token: Token,
     |         ^^^^^
     |
     = Remove the record `Token` from `Foo`.
Error [ETYC0372058]: Cyclic dependency between structs: `Token` --> `Foo` --> `Token`
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | program test.aleo {
     | ^^^^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372030]: A struct or record cannot contain another record.
    --> compiler-test:5:9
     |
   5 |         token: Token,
     |         ^^^^^
     |
     = Remove the record `Token` from `Foo`.
Error [ETYC0372058]: Cyclic dependency between structs: `Token` --> `Foo` --> `Token`
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | program test.aleo {
     | ^^^^^^^^^^^^
